--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "storebuddy",
+  "name": "soresbuddyfinalproject",
   "version": "1.0.0",
-  "description": "Store Buddy App",
-  "main": "index.js",
+  "description": "Store buddy project",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kumar Rohan",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.6.6",
-    "mongoose": "^5.12.8"
+    "mongodb": "^3.6.8",
+    "mongoose": "^5.12.10",
+    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-plugin-autoinc": "^1.1.9",
+    "mongoose-sequence": "^5.3.1",
+    "nodemon": "^2.0.7",
+    "simple-mongoose-autoincrement": "^1.2.1"
   }
 }
