--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "soresbuddyfinalproject",
+  "name": "store_buddy",
   "version": "1.0.0",
-  "description": "Store buddy project",
+  "description": "Store Buddy App",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,13 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.8",
-    "mongoose": "^5.12.10",
-    "mongoose-auto-increment": "^5.0.1",
-    "mongoose-plugin-autoinc": "^1.1.9",
-    "mongoose-sequence": "^5.3.1",
-    "nodemon": "^2.0.7",
-    "simple-mongoose-autoincrement": "^1.2.1"
+    "express-fileupload": "^1.2.1",
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.12.12",
+    "multer": "^1.4.2"
   }
 }
